TEST_PROGRAMS/INVALID/anderson_santossilva/caseSensitivity.min
# MiniLang is case sensitive (according to the reference compiler).
while x DO
	print x;
DONE;

